--- a/Back End/package.json
+++ b/Back End/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
+      "sass": ""
+    },
+  "author": "sass --watch ./sass/main.scss:./css/style.css",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
